add function create doctor

--- a/HealthyCare/BussinessObject/BussinessObject.csproj
+++ b/HealthyCare/BussinessObject/BussinessObject.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess\DoctorData.cs" />
     <Compile Include="DataAccess\UserData.cs" />
+    <Compile Include="Entities\Doctor.cs" />
     <Compile Include="Entities\Role.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
