--- a/HealthyCare/HealthyCare/HealthyCare.csproj
+++ b/HealthyCare/HealthyCare/HealthyCare.csproj
@@ -136,8 +136,12 @@
     <Compile Include="Presenters\UserPresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\IDoctor.cs" />
+    <Compile Include="Views\ICustomer.cs" />
+    <Compile Include="Views\IRegister.cs" />
     <Compile Include="Views\IUser.cs" />
+    <Compile Include="Views\ICreateDoctor.cs" />
+    <Compile Include="Views\IHistory.cs" />
+    <Compile Include="Views\ILogin.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
