--- a/HealthyCare/HealthyCare/HealthyCare.csproj
+++ b/HealthyCare/HealthyCare/HealthyCare.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Presenters\UserPresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\IAdmin.cs" />
     <Compile Include="Views\ICustomer.cs" />
     <Compile Include="Views\IRegister.cs" />
     <Compile Include="Views\IUser.cs" />
