--- a/HealthyCare/HealthyCare/HealthyCare.csproj
+++ b/HealthyCare/HealthyCare/HealthyCare.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\IAdmin.cs" />
+    <Compile Include="Views\IBookingHistory.cs" />
     <Compile Include="Views\IViewBooking.cs" />
     <Compile Include="Views\ICustomer.cs" />
     <Compile Include="Views\IRegister.cs" />
@@ -165,6 +166,7 @@
     <Compile Include="Views\IDoctor.cs" />
     <Compile Include="Views\IHistory.cs" />
     <Compile Include="Views\ILogin.cs" />
+    <Compile Include="Views\IViewFeedback.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -195,6 +197,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Doctor\frmDoctor.resx">
       <DependentUpon>frmDoctor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Doctor\frmHistory.resx">
+      <DependentUpon>frmHistory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Doctor\frmViewFeedbacks.resx">
+      <DependentUpon>frmViewFeedbacks.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Guest\frmLoading.resx">
       <DependentUpon>frmLoading.cs</DependentUpon>
