--- a/HealthyCare/HealthyCare/HealthyCare.csproj
+++ b/HealthyCare/HealthyCare/HealthyCare.csproj
@@ -155,6 +155,12 @@
     <Compile Include="UI\Guest\frmRegister.Designer.cs">
       <DependentUpon>frmRegister.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\User\frmEditPassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\User\frmEditPassword.Designer.cs">
+      <DependentUpon>frmEditPassword.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\User\frmEditProfile.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -174,6 +180,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\IAdmin.cs" />
     <Compile Include="Views\IBookingHistory.cs" />
+    <Compile Include="Views\IFeedback.cs" />
+    <Compile Include="Views\IPassword.cs" />
     <Compile Include="Views\IViewBooking.cs" />
     <Compile Include="Views\ICustomer.cs" />
     <Compile Include="Views\IRegister.cs" />
@@ -207,6 +215,9 @@
     <EmbeddedResource Include="UI\Customer\frmDoctorDetail.resx">
       <DependentUpon>frmDoctorDetail.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\Customer\frmFeedback.resx">
+      <DependentUpon>frmFeedback.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Customer\frmHistory.resx">
       <DependentUpon>frmHistory.cs</DependentUpon>
     </EmbeddedResource>
@@ -227,6 +238,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Guest\frmRegister.resx">
       <DependentUpon>frmRegister.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\User\frmEditPassword.resx">
+      <DependentUpon>frmEditPassword.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\User\frmEditProfile.resx">
       <DependentUpon>frmEditProfile.cs</DependentUpon>
