--- a/HealthyCare/BussinessObject/BussinessObject.csproj
+++ b/HealthyCare/BussinessObject/BussinessObject.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DataAccess\AdminData.cs" />
     <Compile Include="DataAccess\DoctorData.cs" />
     <Compile Include="DataAccess\UserData.cs" />
+    <Compile Include="Entities\Booking.cs" />
     <Compile Include="Entities\Doctor.cs" />
     <Compile Include="Entities\Role.cs" />
     <Compile Include="Entities\User.cs" />
