--- a/HealthyCare/HealthyCare/HealthyCare.csproj
+++ b/HealthyCare/HealthyCare/HealthyCare.csproj
@@ -118,6 +118,12 @@
     <Compile Include="UI\Admin\frmManageUser.Designer.cs">
       <DependentUpon>frmManageUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Customer\frmBooking.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Customer\frmBooking.Designer.cs">
+      <DependentUpon>frmBooking.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Customer\frmCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,6 +147,12 @@
     </Compile>
     <Compile Include="UI\Customer\frmHistory.Designer.cs">
       <DependentUpon>frmHistory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Doctor\frmChat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Doctor\frmChat.Designer.cs">
+      <DependentUpon>frmChat.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Doctor\frmDoctor.cs">
       <SubType>Form</SubType>
@@ -203,6 +215,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\SignalR_Services.cs" />
     <Compile Include="Views\IAdmin.cs" />
+    <Compile Include="Views\IBooking.cs" />
     <Compile Include="Views\IBookingHistory.cs" />
     <Compile Include="Views\IFeedback.cs" />
     <Compile Include="Views\IPassword.cs" />
@@ -234,6 +247,9 @@
     <EmbeddedResource Include="UI\Admin\frmManageUser.resx">
       <DependentUpon>frmManageUser.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\Customer\frmBooking.resx">
+      <DependentUpon>frmBooking.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Customer\frmCustomer.resx">
       <DependentUpon>frmCustomer.cs</DependentUpon>
     </EmbeddedResource>
@@ -245,6 +261,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Customer\frmHistory.resx">
       <DependentUpon>frmHistory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Doctor\frmChat.resx">
+      <DependentUpon>frmChat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Doctor\frmDoctor.resx">
       <DependentUpon>frmDoctor.cs</DependentUpon>
